[package]
name = "diff_visualize"
version = "0.1.0"
authors = ["e1810 <v.iceele1810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
actix-web = "3.3.2"
thiserror = "1.0.24"
serde = "1.0.123"
actix-rt = "2.1.0"
actix-files = "0.5.0"
